# nlearn-mcp

./: .env.example  .gitignore  .mcpbignore  CONTRIBUTING.md  FIXES.md  IMPROVEMENTS.md  LICENSE  README.md  SUMMARY.md  deadlines.ics  generate_ical.py  manifest.json  pyproject.toml  run_ical.bat  scratch_test.py  server.py
.cursor/: mcp.json
.github/workflows/: ical.yml  test.yml
auth/: session.py
nlearn_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scrapers/: assignments.py  timeline.py
scripts/: test_mcp_tools.py
tests/: test_assignments.py  test_auth_session_integration.py  test_docx_parser.py  test_pdf_parser.py  test_pptx_parser.py  test_sync_calendar.py  test_timeline.py  test_url_validation.py
tools/: get_assignment.py  get_deadlines.py  refresh_session.py  sync_calendar.py
utils/: debug.py  docx_parser.py  pdf_parser.py  pptx_parser.py  url_validation.py  validation.py
